# umeta

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py  test.db  tox.ini
config/: umeta.config.json
umeta/: cli.py  config.py  core.py  crud.py  database.py  models.py
umeta/cli/: __init__.py
umeta/generators/: __init__.py  exiftags.py  utils.py
umeta/source/: __init__.py  disk.py
umeta/sources/: __init__.py  disk.py  utils.py
